Add an image for twitter sharing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@ layout: compress
   <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
   <link rel="stylesheet" href="{{site.baseurl}}/css/syntax.css">
   {% seo %}
+
+	<meta name="twitter:image" content="{{site.baseurl}}/images/linux.png">
 </head>
 <body style="background-color: rgb(255, 255, 255)">
  <script src="{{site.baseurl}}/js/theme.min.js"></script>
