Add Facebook share image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@ layout: compress
   {% seo %}
 
 	<meta name="twitter:image" content="{{site.baseurl}}/images/linux.png">
+	<meta name="og:image" content="{{site.baseurl}}/images/linux.png">
 </head>
 <body style="background-color: rgb(255, 255, 255)">
  <script src="{{site.baseurl}}/js/theme.min.js"></script>
